--- a/device/arista/x86_64-arista_7060_cx32s/Arista-7060CX-32S-C32/qos.json.j2
+++ b/device/arista/x86_64-arista_7060_cx32s/Arista-7060CX-32S-C32/qos.json.j2
@@ -137,7 +137,10 @@
             "yellow_max_threshold":"312000",
             "yellow_min_threshold":"104000",
             "green_max_threshold": "312000",
-            "green_min_threshold": "104000"
+            "green_min_threshold": "104000",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         }
     },
     "QUEUE": {
