--- a/device/barefoot/x86_64-accton_wedge100bf_65x-r0/mavericks/qos.json.j2
+++ b/device/barefoot/x86_64-accton_wedge100bf_65x-r0/mavericks/qos.json.j2
@@ -129,7 +129,10 @@
             "yellow_max_threshold":"516096",
             "yellow_min_threshold":"516096",
             "green_max_threshold": "184320",
-            "green_min_threshold": "184320"
+            "green_min_threshold": "184320",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         },
         "AZURE_LOSSLESS": {
             "wred_green_enable":"true",
@@ -140,7 +143,10 @@
             "yellow_max_threshold":"516096",
             "yellow_min_threshold":"516096",
             "green_max_threshold": "184320",
-            "green_min_threshold": "184320"
+            "green_min_threshold": "184320",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         }
     },
     "QUEUE": {
