--- a/device/dell/x86_64-dell_z9100_c2538-r0/Force10-Z9100-T0/qos.json.j2
+++ b/device/dell/x86_64-dell_z9100_c2538-r0/Force10-Z9100-T0/qos.json.j2
@@ -137,7 +137,10 @@
             "yellow_max_threshold":"312000",
             "yellow_min_threshold":"104000",
             "green_max_threshold": "312000",
-            "green_min_threshold": "104000"
+            "green_min_threshold": "104000",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         }
     },
     "QUEUE": {
