--- a/device/ingrasys/x86_64-ingrasys_s9130_32x-r0/INGRASYS-S9130-32X/qos.json.j2
+++ b/device/ingrasys/x86_64-ingrasys_s9130_32x-r0/INGRASYS-S9130-32X/qos.json.j2
@@ -116,7 +116,10 @@
             "yellow_max_threshold":"628320",
             "yellow_min_threshold":"78400",
             "green_max_threshold": "642656",
-            "green_min_threshold": "80192"
+            "green_min_threshold": "80192",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         },
         "AZURE_LOSSLESS" : {
             "wred_green_enable":"true",
@@ -128,7 +131,10 @@
             "yellow_max_threshold":"628320",
             "yellow_min_threshold":"78400",
             "green_max_threshold": "642656",
-            "green_min_threshold": "80192"
+            "green_min_threshold": "80192",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         }
     },
     "QUEUE": {
