--- a/device/mellanox/x86_64-mlnx_lssn2700-r0/LS-SN2700/qos.json.j2
+++ b/device/mellanox/x86_64-mlnx_lssn2700-r0/LS-SN2700/qos.json.j2
@@ -133,7 +133,10 @@
             "yellow_max_threshold":"516096",
             "yellow_min_threshold":"516096",
             "green_max_threshold": "184320",
-            "green_min_threshold": "184320"
+            "green_min_threshold": "184320",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         },
         "AZURE_LOSSLESS": {
             "wred_green_enable":"true",
@@ -144,7 +147,10 @@
             "yellow_max_threshold":"516096",
             "yellow_min_threshold":"516096",
             "green_max_threshold": "184320",
-            "green_min_threshold": "184320"
+            "green_min_threshold": "184320",
+            "green_drop_probability":"100",
+            "yellow_drop_probability":"100",
+            "red_drop_probability":"100"
         }
     },
     "QUEUE": {
