--- a/device/arista/x86_64-arista_7050_qx32/Arista-7050-QX32/buffers.json.j2
+++ b/device/arista/x86_64-arista_7050_qx32/Arista-7050-QX32/buffers.json.j2
@@ -115,6 +115,9 @@
         },
         "{{ port_names }}|0-1": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
+        },
+        "{{ port_names }}|5": {
+            "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         }
     },
     "BUFFER_QUEUE": {
@@ -122,6 +125,9 @@
             "profile" : "[BUFFER_PROFILE|egress_lossless_profile]"
         },
         "{{ port_names }}|0-1": {
+            "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
+        },
+        "{{ port_names }}|5": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         }
     }
