--- a/device/barefoot/x86_64-accton_wedge100bf_65x-r0/mavericks/qos.json.j2
+++ b/device/barefoot/x86_64-accton_wedge100bf_65x-r0/mavericks/qos.json.j2
@@ -1,1 +1,19 @@
+{%- macro generate_tc_to_pg_map() %}
+    "TC_TO_PRIORITY_GROUP_MAP": {
+        "AZURE": {
+            "3": "3",
+            "4": "4"
+        }
+    },
+{%- endmacro %}
+
+{%- macro generate_pfc_to_pg_map() %}
+    "PFC_PRIORITY_TO_PRIORITY_GROUP_MAP": {
+        "AZURE": {
+            "3": "3",
+            "4": "4"
+        }
+    },
+{%- endmacro %}
+
 {%- include 'qos_config.j2' %}
