--- a/files/build_templates/buffers_config.j2
+++ b/files/build_templates/buffers_config.j2
@@ -130,6 +130,9 @@ def
     "BUFFER_PG": {
         "{{ port_names_active }}|0-1": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
+        },
+        "{{ port_names_active }}|5": {
+            "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         }
     },
 {% endif %}
@@ -142,6 +145,9 @@ def
             "profile" : "[BUFFER_PROFILE|egress_lossless_profile]"
         },
         "{{ port_names_active }}|0-1": {
+            "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
+        },
+        "{{ port_names_active }}|5": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         }
     }
