--- a/device/arista/x86_64-arista_7050_qx32/Arista-7050-QX32/buffers.json.j2
+++ b/device/arista/x86_64-arista_7050_qx32/Arista-7050-QX32/buffers.json.j2
@@ -116,7 +116,7 @@
         "{{ port_names }}|0-1": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         },
-        "{{ port_names }}|5": {
+        "{{ port_names }}|5-6": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         }
     },
@@ -127,7 +127,7 @@
         "{{ port_names }}|0-1": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         },
-        "{{ port_names }}|5": {
+        "{{ port_names }}|5-6": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         }
     }
