--- a/device/dell/x86_64-dell_s6000_s1220-r0/Force10-S6000/buffers.json.j2
+++ b/device/dell/x86_64-dell_s6000_s1220-r0/Force10-S6000/buffers.json.j2
@@ -116,7 +116,7 @@
         "{{ port_names }}|0-1": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         },
-        "{{ port_names }}|5": {
+        "{{ port_names }}|5-6": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         }
     },
@@ -127,7 +127,7 @@
         "{{ port_names }}|0-1": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         },
-        "{{ port_names }}|5": {
+        "{{ port_names }}|5-6": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         }
     }
