--- a/files/build_templates/buffers_config.j2
+++ b/files/build_templates/buffers_config.j2
@@ -124,6 +124,9 @@ def
         },
         "{{ port_names_all }}|5": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
+        },
+        "{{ port_names_all }}|6": {
+            "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         }
     },
 {% endif %}
@@ -139,6 +142,9 @@ def
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         },
         "{{ port_names_all }}|5": {
+            "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
+        },
+        "{{ port_names_all }}|6": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         }
     }
