--- a/files/build_templates/buffers_config.j2
+++ b/files/build_templates/buffers_config.j2
@@ -141,10 +141,7 @@ def
         "{{ port_names_all }}|0-1": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         },
-        "{{ port_names_all }}|5": {
-            "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
-        },
-        "{{ port_names_all }}|6": {
+        "{{ port_names_all }}|5-6": {
             "profile" : "[BUFFER_PROFILE|egress_lossy_profile]"
         }
     }
