--- a/device/mellanox/x86_64-mlnx_msn2100-r0/ACS-MSN2100/qos.json.j2
+++ b/device/mellanox/x86_64-mlnx_msn2100-r0/ACS-MSN2100/qos.json.j2
@@ -1,1 +1,16 @@
+{%- macro generate_tc_to_pg_map() %}
+    "TC_TO_PRIORITY_GROUP_MAP": {
+        "AZURE": {
+            "0": "0",
+            "1": "1",
+            "2": "1",
+            "3": "3",
+            "4": "4",
+            "5": "1",
+            "6": "1",
+            "7": "7"
+        }
+    },
+{%- endmacro %}
+
 {%- include 'qos_config.j2' %}
