--- a/files/build_templates/buffers_config.j2
+++ b/files/build_templates/buffers_config.j2
@@ -131,7 +131,7 @@ def
 {{ defs.generate_pg_profils(port_names_active) }}
 {% else %}
     "BUFFER_PG": {
-        "{{ port_names_active }}|0-1": {
+        "{{ port_names_active }}|0": {
             "profile" : "[BUFFER_PROFILE|ingress_lossy_profile]"
         }
     },
